--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "6.1",
+    "react-map-gl-geocoder": "^2.2.0",
     "react-scripts": "5.0.0",
     "timeago.js": "^4.0.2",
     "transform-loader": "^0.2.4",
